ingrss/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /first-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-first-app
            port:
              number: 5678
      - path: /second-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-second-app
            port:
              number: 5678
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-first-app
            port:
              number: 5678
